--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "@langchain/community": "^0.3.58",
     "@langchain/core": "^0.3.79",
+    "@langchain/ollama": "^1.0.2",
+    "@langchain/pinecone": "^1.0.1",
     "@langchain/textsplitters": "^1.0.1",
+    "@pinecone-database/pinecone": "^6.1.3",
+    "dotenv": "^17.2.3",
     "pdf-parse": "1.1.1"
   }
 }
